config-root/namespaces/jx-production/nodey530/nodey530-nodey530-deploy.yaml
# Source: nodey530/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nodey530-nodey530
  labels:
    draft: draft-app
    chart: "nodey530-1.0.4"
    gitops.jenkins-x.io/pipeline: 'namespaces'
  namespace: jx-production
  annotations:
    wave.pusher.com/update-on-config-change: 'true'
spec:
  selector:
    matchLabels:
      app: nodey530-nodey530
  replicas: 1
  template:
    metadata:
      labels:
        draft: draft-app
        app: nodey530-nodey530
    spec:
      containers:
        - name: nodey530
          image: "gcr.io/jenkins-x-labs-bdd/nodey530:1.0.4"
          imagePullPolicy: IfNotPresent
          envFrom: null
          ports:
            - containerPort: 8080
          livenessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 60
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          readinessProbe:
            httpGet:
              path: /
              port: 8080
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          resources:
            limits:
              cpu: 400m
              memory: 256Mi
            requests:
              cpu: 200m
              memory: 128Mi
      terminationGracePeriodSeconds:
      imagePullSecrets:
